# -migrate_public-_OOP_lab3_game

./: .sh  CMakeLists.txt  README.md  doxygenConfigDiff.patch
src/: CMakeLists.txt  main.cpp  speedTest.cpp
src/controller/: CMakeLists.txt  controller.cpp  controller.hpp  creaturesAI.cpp  creaturesAI.hpp
src/model/: CMakeLists.txt  ammoBox.hpp  ammoType.hpp  cell.hpp  entity.hpp  firstAidKit.hpp  foragerCreature.hpp  game.hpp  hands.hpp  interfaces.hpp  inventory.hpp  item.hpp  itemUseLogic.cpp  matrix.hpp  point.hpp  shooterCreature.hpp  soldier.hpp  team.hpp  weapon.hpp  wildCreature.hpp
src/view/: CMakeLists.txt  view.cpp  view.hpp
tests/: CMakeLists.txt  controllerTest.cpp  modelTest.cpp
